--- a/code_ghms_bibliometric.Rmd
+++ b/code_ghms_bibliometric.Rmd
@@ -38,7 +38,7 @@ knitr::opts_chunk$set(echo = TRUE, dev = "tikz", cache=TRUE)
 
 ```{r packages, results="hide", message=FALSE, warning=FALSE}
 
-# PRELIMINARY FUNCTIONS ----------------------------------------------------------
+# PRELIMINARY FUNCTIONS #######################################################
 
 # Function to read in all required packages in one go 
 loadPackages <- function(x) {
@@ -53,7 +53,8 @@ loadPackages <- function(x) {
 # Load the packages
 loadPackages(c(
   "bibliometrix", "tidyverse", "data.table", "scales", "pdfsearch", "pdftools", 
-  "openxlsx", "cowplot", "wesanderson", "sjmisc", "ggpubr"))
+  "openxlsx", "cowplot", "wesanderson", "sjmisc", "ggpubr", "tm", "syuzhet", 
+  "qdapRegex", "tidytext", "igraph", "ggraph"))
 
 # Create custom theme
 theme_AP <- function() {
@@ -66,38 +67,75 @@ theme_AP <- function() {
                                     color = NA), 
           strip.background = element_rect(fill = "white"), 
           legend.margin = margin(0.5, 0.1, 0.1, 0.1),
-          legend.box.margin=margin(0.2,-2,-7,-7))
+          legend.box.margin = margin(0.2,-2,-7,-7))
 }
 
 # Set checkpoint
 dir.create(".checkpoint")
 library("checkpoint")
 
-checkpoint("2022-05-11", 
+checkpoint("2022-05-30", 
            R.version ="4.2.0", 
            checkpointLocation = getwd())
 ```
 
+```{r fun_clean_text}
+
+# FUNCTION TO CLEAN TEXT ######################################################
+
+# Function to remove punctuation, citations, numbers, stopwords in english, 
+# bring to lowercase and strip whitespace, and especial characters, etc...
+clear_text <- function(x) {
+  y <- gsub("-", "", x)
+  y <- rm_citation(y)
+  y <- tm::removePunctuation(y)
+  y <- tm::removeNumbers(y)
+  y <- tm::removeWords(y, stopwords::stopwords(language = "en"))
+  y <- tolower(y)
+  y <- str_replace_all(y, "[[:punct:]]", "") # Remove punctuation characters
+  y <- y <- str_remove_all(y, "[^[\\da-zA-Z ]]")# Remove all non-alphanumerical
+  y <- stemDocument(y) # Stem the document and keep only the root of the word
+  y <- tm::stripWhitespace(y)
+  y <- str_squish(y)
+  y <- tm::removeWords(y, c(" et ", "al", "table", "figure", "fig", 
+                            "figs", "can", "eg", "mm", "yr", 
+                            "last", "access", "see", "section"))
+  y <- gsub(" ?doi\\w+ ?", "", y) # Remove words that start with doi
+  y <- str_replace(y, "http", "") # Remove https
+  y <- tm::removeWords(y, stopwords::stopwords(language = "en"))
+  y <- trimws(y) # Remove leading/trailing white space
+  y <- tm::stripWhitespace(y)
+  y <- gsub("\\s[A-Za-z](?= )", "", y, perl = TRUE) # Remove isolated letters
+  y <- gsub("\\s[A-Za-z]$", "", y, perl = TRUE) # Remove isolated letters end of string
+  y <- str_squish(y)
+
+  return(y)
+}
+```
+
 \newpage
 
-# Bibliometric analysis
+# Models under study
 
-```{r vector_models}
+```{r models_vec}
 
-# VECTOR WITH NAME OF MODELS ---------------------------------------------------
+# VECTOR WITH NAME OF MODELS ###################################################
 
 models <- c("WaterGAP", "PCR-GLOBWB", "MATSIRO", "H08", "JULES-W1", "MPI-HM", 
-            "MHM", "LPJmL", "CWatM", "CLM", "DBHM", "ORCHIDEE")
+            "MHM", "LPJmL", "CWatM", "CLM", "DBHM", "ORCHIDEE", "GR4J")
 
 models_vec <- paste(models, "_ref.bib", sep = "")
 ```
 
-## Analysis
+# Bibliometric analysis
 
-```{r bibliometric, results="hide", message=FALSE, dependson="vector_models"}
+```{r bibliometric_analysis, dependson=c("models_vec", "fun_clean_text"), results="hide"}
 
-# RUN FOR LOOP -----------------------------------------------------------------
-output <- results <- years <- journals <- dt <- list()
+# BIBLIOMETRIC ANALYSIS ########################################################
+
+output <- results <- years <- journals <- dt <- dt.clean <- list()
+
+selected_cols <- c("title", "abstract", "keywords", "keywords.plus")
 
 for (i in 1:length(models_vec)) {
   
@@ -131,6 +169,7 @@ for (i in 1:length(models_vec)) {
   keywords.plus <- gsub(";;", ";", output[[i]]$ID)
   
   # Create data.table ----------------------------------------------------------
+  
   dt[[i]] <- data.table("WOS" = output[[i]]$UT, 
                         "title" = title,
                         "year" = output[[i]]$PY,
@@ -144,288 +183,366 @@ for (i in 1:length(models_vec)) {
                         "university.last" = university.last, 
                         "abstract" = output[[i]]$AB) 
   
+  dt.clean[[i]] <- copy(dt[[i]])
+  
+  dt.clean[[i]][, (selected_cols):= lapply(.SD, function(x) 
+    clear_text(x)), .SDcols = selected_cols]
+  
+  # Export data dirty and clean
+  write.xlsx(dt[[i]], file = paste(models[i], "_bibliometric.xlsx", sep = ""))
+  write.xlsx(dt.clean[[i]], file = paste(models[i], "_bibliometric_clean.xlsx", sep = ""))
+  
   # Retrieve analysis bibliometrix ---------------------------------------------
+  
   results[[i]] <- biblioAnalysis(output[[i]], sep = ";")
   years[[i]] <- data.table(results[[i]]$Years)
   journals[[i]] <- data.table(results[[i]]$Sources) %>%
     .[, SO:= str_to_title(SO)] 
 }
 
+# Fill out affiliations erroneously labelled as NA -----------------------------
+
+# Watergap (1)
+for(i in c(1, 4, 5)) {
+  output[[1]]$affiliations[[i]] <- "UNIVERSITAT KASSEL"
+}
+
+
+# Add names of models ----------------------------------------------------------
 names(years) <- models
 names(journals) <- models
-names(dt) <- models
+names(dt.clean) <- models
+names(dt.clean) <- models
 ```
 
-```{r arrange_data, dependson="bibliometric"}
+# Keywords analysis: "uncertainty" and "sensitivity"
 
-# ARRANGE DATA -----------------------------------------------------------------
+```{r keywords, dependson=c("models_vec", "fun_clean_text"), results="hide", message=FALSE, warning=FALSE}
+
+# KEYWORDS ANALYSIS ############################################################
+
+# Define vectors for search ---------------------------------------------------
+directory <- "/Users/arnaldpuy/Documents/papers/ghms_bibliometric/"
+directory_vec <- paste(directory, models, "_pdfs", sep = "") 
+filename_keywords <- paste(models, "keywords", sep = "_")
+
+# Define vectors with keywords ------------------------------------------------
+keywords_vec <- c("uncertainty", "sensitivity")
+keywords_vec_stemmed <- stemDocument(keywords_vec)
+
+# Loop -------------------------------------------------------------------------
+dt.keyword <- dt.keyword.clean <- output <- list()
+for (i in 1:length(directory_vec)) {
+  
+  output[[i]] <- keyword_directory(directory_vec[i],
+                                   keyword = keywords_vec_stemmed,
+                                   split_pdf = TRUE)
+  
+  dt.keyword[[i]] <- data.table("name" = output[[i]]$pdf_name, 
+                                "keyword" = output[[i]]$keyword, 
+                                "text" = output[[i]]$line_text)
+  
+  dt.keyword.clean[[i]] <- copy(dt.keyword[[i]])
+  
+  # Clean the text where the keywords are located
+  dt.keyword.clean[[i]] <- dt.keyword.clean[[i]][, text:= clear_text(text)]
+  
+  # Write dirty and clean data
+  fwrite(dt.keyword[[i]], file = paste(filename_keywords[i], ".csv", sep = ""))
+  fwrite(dt.keyword.clean[[i]], file = paste(filename_keywords[i], "_clean.csv", sep = ""))
+}
+
+names(output) <- models
+names(dt.keyword) <- models
+names(dt.keyword.clean) <- models
+```
+
+# Arrange the data
+
+```{r arrange_data, dependson=c("keywords", "bibliometric_analysis")}
+
+# ARRANGE DATA #################################################################
+
+# Bibliometric analysis -------------------------
 
 # Correct for USA and China
 colsName <- c("country.first", "country.last") 
-full.dt <- rbindlist(dt, idcol = "Model") %>%
+full.dt <- rbindlist(dt.clean, idcol = "Model") %>%
   .[, (colsName):= lapply(.SD, function(x) 
     ifelse(grepl("USA", x), "USA", x)), .SDcols = colsName] %>%
   .[, (colsName):= lapply(.SD, function(x) 
     ifelse(grepl("CHINA", x), "CHINA", x)), .SDcols = colsName]
 
-# Check which studies have "Uncertainty" or "Sensitivity" in keywords,
-# keywords.plus or abstract
-keywords_search <- c("UNCERTAINTY|SENSITIVITY")
+# Export
+fwrite(full.dt, "full.dt.csv")
 
-tmp <- cbind(str_detect(full.dt$abstract, keywords_search), 
-            str_detect(full.dt$keywords.plus, keywords_search), 
-            str_detect(full.dt$keywords, keywords_search))
+# Keywords analysis -----------------------------
+full.keyword.dt <- rbindlist(dt.keyword.clean, idcol = "Model")
 
-full.dt[, "uncertainty.sensitivity":= apply(tmp, 1, function(x) any(x, na.rm = TRUE))]
-
-# Write dataset-
-write.xlsx(full.dt, "full.dt.xlsx")
-
-# Write dataset only with studies that have the keywords
-full.dt[uncertainty.sensitivity == TRUE] %>%
-  write.xlsx(., "full.dt.uncertain.xlsx")
+# Export
+fwrite(full.keyword.dt, "full.keyword.dt.csv")
 ```
 
-```{r plot_time, dependson="bibliometric", warning = FALSE, fig.height=3, fig.width=4.5}
+# Descriptive analysis
 
-# PLOT ------------------------------------------------------------------------
-names(years) <- models
-tmp <- rbindlist(years, idcol = "Model")[, .N, .(V1, Model)]
+```{r descriptive, dependson="arrange_data"}
 
-# Print total number of studies 
-tmp[, sum(N)]
+# DESCRIPTIVE STUDY ############################################################
 
-plot.time <- tmp %>%
+# Total number of studies
+total.n <- full.dt[, .(Model, WOS)] %>%
+  .[, .(total.papers = .N), Model] %>%
+  .[order(-total.papers)]
+
+total.n
+
+sum(total.n$total.papers)
+```
+
+```{r cumulative_plot, dependson="bibliometric_analysis", fig.height=2.5, fig.width=2.5, warning = FALSE}
+
+# NUMBER OF STUDIES THROUGHT TIME ##############################################
+
+plot.time <- rbindlist(years, idcol = "Model")[, .N, .(V1, Model)] %>%
   .[, V1:= as.factor(V1)] %>%
   ggplot(., aes(V1, N, fill = Model)) +
   geom_col() +
   scale_x_discrete(breaks = pretty_breaks(n = 3)) +
   labs(x = "Year", y = "Nº articles") +
-  theme_AP()
+  theme_AP() + 
+  theme(legend.position = "none")
 
 plot.time
 ```
 
-```{r plot_journals, dependson="bibliometric", fig.height=6, fig.width=5.5, warning=FALSE}
+```{r fraction_unc, dependson="arrange_data", fig.height=2.5, fig.width=2.5}
 
-# PLOT JOURNALS ---------------------------------------------------------------
+# FRACTION OF STUDIES WITH UNCERTAINTI AND SENSIT* IN THE ABSTRACT #############
 
-rbindlist(journals, idcol = "Models") %>%
+full.dt <- full.dt[, `:=` (uncertainti = str_detect(abstract, keywords_vec_stemmed[1]), 
+                           sensit = str_detect(abstract, keywords_vec_stemmed[2]))] 
+
+plot.n.keywords <- full.dt[, lapply(.SD, function(x) 
+  sum(x) / .N), .SDcols = (keywords_vec_stemmed), Model] %>%
+  melt(., measure.vars = keywords_vec_stemmed) %>%
+  ggplot(., aes(variable, value, fill = variable)) +
+  geom_boxplot() + 
+  labs(y = "Fraction of articles", x = "") +
+  scale_y_continuous(breaks = pretty_breaks(n = 3), 
+                     limits = c(0, 1)) +
+  scale_fill_discrete(name = "Keyword") +
+  theme_AP() + 
+  theme(legend.position = c(0.45, 0.75))
+
+plot.n.keywords
+
+# Fraction of studies with both keywords in the abstract
+full.dt[uncertainti == "TRUE" & sensit == "TRUE", .N] / full.dt[, .N]
+```
+
+```{r keywords_time, fig.height=2.5, fig.width=3.5, dependson="arrange_data"}
+
+# FRACTION OF STUDIES WITH KEYWORDS THROUGH TIME ###############################
+
+total.n.year <- rbindlist(years, idcol = "Model") %>%
+  .[, .(total.n = .N), V1] %>%
+  setnames(., "V1", "year")
+
+plot.fraction.years <- full.dt[, .(WOS, uncertainti, sensit, year)] %>%
+  melt(., measure.var = keywords_vec_stemmed) %>%
+  .[value == TRUE, .N, .(year, variable)] %>%
+  merge(., total.n.year, by = "year") %>%
+  .[, fraction:= N / total.n] %>%
+  ggplot(., aes(year, fraction, color = variable, group = variable)) +
+  geom_line() + 
+  scale_color_discrete(name = "Keyword") +
+  scale_y_continuous(limits = c(0, 1)) +
+  labs(x = "Year", y = "Fraction of articles") +
+  theme_AP() +
+  theme(legend.position = c(0.2, 0.75))
+
+plot.fraction.years
+```
+
+```{r merge_plots_descriptive, fig.height=4.8, fig.width=5.5, dependson=c("keywords_time", "fraction_unc", "cumulative_plot"), warning=FALSE}
+
+# MERGE DESCRIPTIVE PLOTS ######################################################
+
+legend <- get_legend(plot.time + theme(legend.position = "top"))
+top <- plot_grid(plot.time, plot.n.keywords, ncol = 2, labels = "auto", 
+                 rel_widths = c(0.65, 0.35))
+all <- plot_grid(legend, top, ncol = 1, rel_heights = c(0.22, 0.78))
+plot_grid(all, plot.fraction.years, 
+          ncol = 1, labels = "", rel_heights = c(0.6, 0.4))
+```
+
+```{r plot_journals, dependson="bibliometric_analysis", warning=FALSE}
+
+# PLOT JOURNALS ################################################################
+
+rbindlist(journals, idcol = "Model") %>%
   .[, sum(N), SO] %>%
   .[order(-V1)] %>%
-  .[, .SD[1:25]] %>%
+  .[1:20] %>%
   na.omit() %>%
-  ggplot(., aes(x = reorder(SO, V1), y = V1)) +
+  ggplot(., aes(reorder(SO, V1, sum), V1)) +
   geom_bar(stat = "identity") +
   coord_flip() +
   labs(x = "", y = "Nº of articles") +
   theme_AP()
 ```
 
-## Institutional legacy in models
+```{r word_clouds, dependson="arrange_data", device="pdf", fig.height=3, fig.width=3.5}
 
-```{r analyse_data, dependson="arrange_data"}
+# WORDCLOUD OF WORDS IN ABSTRACT ###############################################
 
-# ANALYSE DATASET --------------------------------------------------------------
+tmp <- split(full.dt, full.dt$Model)
+names(tmp) <- models
 
-dt.use <- full.dt[, .N, .(Model, university.first)] %>%
-  dcast(., university.first~ Model, value.var = "N")
-
-for(j in seq_along(dt.use)){
-  set(dt.use, i = which(is.na(dt.use[[j]]) & is.numeric(dt.use[[j]])), j = j, value = 0)
+out <- dtm <- m <- v <- word.count <- list()
+for (i in names(tmp)) {
+  out[[i]] <- Corpus(VectorSource(tmp[[i]]$abstract))
+  dtm[[i]] <- tm::TermDocumentMatrix(out[[i]])
+  m[[i]] <- as.matrix(dtm[[i]])
+  v[[i]] <- sort(rowSums(m[[i]]), decreasing=TRUE)
+  word.count[[i]] <- data.table(word = names(v[[i]]), freq = v[[i]])
 }
 
-# Total number each institute uses a model
-dt.use[, total:= rowSums(.SD), .SDcols = models]
+word.count.dt <- rbindlist(word.count, idcol = "Model")
 
-# First 50
-dt.50 <- copy(dt.use)[order(-total)][1:50]
+# Plot wordcloud -------------------------------------------
 
-# Turn lowercase of institutions except acronyms
-exceptions <- c("USA", "UK", "CNRS", "IIASA", "DOE", "PCSHE", "IIT", "NCAR", 
-                "NOAA")
-pattern <- sprintf("(?:%s)(*SKIP)(*FAIL)|\\b([A-Z])(\\w+)", 
-                   paste0(exceptions, collapse = "|"))
-dt.50 <- dt.50[, university.first:= gsub(pattern, "\\1\\L\\2", 
-                                         university.first, perl = TRUE)]
+plots.wordcloud <- list()
 
-tmp <- dt.50[, lapply(.SD, function(x) x / total), .SDcols = models] %>%
-  .[, lapply(.SD, round, 2), .SDcols = models]
-```
-
-```{r histogram_legacy, dependson="analyse_data", fig.height=2.5, fig.width=2.5}
-
-# RETRIEVE MAX VALUES PER INSTITUTE ---------------------------------
-
-matrix.50 <- as.matrix(tmp)
-colIndex <- apply(matrix.50, 1, which.max)
-
-out <- vector()
-for(i in 1:length(colIndex)) {
-  out[i] <- matrix.50[[i, colIndex[i]]]
+for(i in names(word.count)) {
+  plots.wordcloud[[i]] <- word.count.dt[Model == i] %>%
+    .[1:50] %>%
+    ggplot(., aes(label = word, size = freq)) +
+    ggwordcloud::geom_text_wordcloud_area(eccentricity = 1, shape = "square") +
+    scale_size_area(max_size = 10) +
+    theme_AP() + 
+    ggtitle(names(word.count[i]))
 }
 
-# Compute some statistics on the vector
-f <- c(mean, median, min, max)
-sapply(f, function(f) f(out, na.rm = TRUE))
+# Check rank of the terms "uncertainty" and "sensitivity" in the abstract -----
 
-# Plot
-data.table(out) %>%
-  ggplot(., aes(out)) +
-  geom_histogram() +
-  labs(x = "Fraction", y = "Counts") +
-  theme_AP()
+word.count.dt[, rank:= frank(-freq, ties.method = "first"), Model]
 
-data.table(out) %>%
-  ggplot(., aes(out)) +
-  geom_boxplot() +
-  labs(x = "Fraction", y = "Counts") +
-  theme_AP()
-```
+rank.keywords <- word.count.dt[word %chin% keywords_vec_stemmed] %>%
+  merge(., total.n, by = "Model") 
 
-```{r plot_use, dependson="analyse_data", fig.height=7, fig.width=6.5, warning=FALSE}
+rank.keywords[order(word, rank)]
 
- # PLOT USE OF MODELS PER INSITUTE ---------------------------------------------
+# Plot-------------------------------------------
 
-a <- melt(dt.50, measure.vars = models) %>%
-  na.omit() %>%
-  .[, variable:= factor(variable, levels = sort(models))] %>%
-  ggplot(., aes(value, university.first, fill = variable)) + 
-  scale_y_discrete(limits = rev) +
-  labs(x = "Nº of articles", y = "") +
-  scale_fill_discrete(name = "Model") +
-  geom_bar(position = "stack", stat = "identity") + 
-  theme_AP() + 
-  theme(legend.position = "none", 
-        axis.text.y = element_text(size = 9))
-
-b <- melt(dt.50, measure.vars = models) %>%
-  na.omit() %>%
-  .[, variable:= factor(variable, levels = sort(models))] %>%
-  ggplot(., aes(value, university.first, fill = variable)) + 
-  scale_y_discrete(limits = rev) +
-  labs(x = "Fraction", y = "") +
-  scale_fill_discrete(name = "Model") +
-  scale_x_continuous(breaks = pretty_breaks(n = 3)) +
-  geom_bar(position = "fill", stat = "identity") + 
-  theme_AP() + 
-  theme(axis.text.y = element_blank(), 
-        legend.position = "none")
-
-legend <- get_legend(a + theme(legend.position = "top"))
-bottom <- plot_grid(a, b, ncol = 2, labels = "auto", rel_widths = c(0.79 , 0.21))
-ggarrange(legend, bottom, nrow = 2, heights = c(0.1, 0.9))
-```
-
-## Keywords and keywords plus
-
-```{r keywords_analysis, dependson="arrange_data"}
-
-# ANALYSE FREQUENCY OF KEYWORDS AND KEYWORDS PLUS -----------------------------
-
-# Keywords
-strsplit(full.dt$keywords, ";", fixed = TRUE) %>%
-  unlist(lapply(., str_trim)) %>%
-  data.table("keywords" = .) %>%
-  .[, .N, keywords] %>%
-  .[order(-N)] %>%
-  head(50)
-
-# Keywords plus
-strsplit(full.dt$keywords.plus, ";", fixed = TRUE) %>%
-  unlist(lapply(., str_trim)) %>%
-  data.table("keywords.plus" = .) %>%
-  .[, .N, keywords.plus] %>%
-  .[order(-N)] %>%
-  head(50)
-```
-
-```{r plot_bars, warning = FALSE, fig.height=2.5, fig.width=4, dependson="bibliometric"}
-
-# PLOT TOTAL NUMBER OF STUDIES AND TOTAL NUMBER STUDIES WITH KEYWORDS ----------
-
-total.studies <- tmp[, sum(N), Model]
-setnames(total.studies, "V1", "Total")
-
-plot.bars <- full.dt[uncertainty.sensitivity == "TRUE"] %>%
-  .[, sum(uncertainty.sensitivity), Model] %>%
-  merge(., total.studies, by = "Model") %>%
-  melt(., measure.vars = c("V1", "Total")) %>%
-  ggplot(., aes(reorder(Model, value), value, fill = variable)) +
+ggplot(rank.keywords, aes(reorder(Model, -rank), rank, color = word)) +
+  geom_point() + 
   coord_flip() +
-  labs(y = "Nº of articles", x = "") +
-  scale_fill_manual(values = wes_palette(2, name = "Darjeeling1"), 
-                    name = "", 
-                    labels = c("$N$ keywords", 
-                               "$N$ total")) +
-  scale_y_log10() +
-  annotation_logticks(sides = "b") +
-  geom_bar(stat = "identity", position = position_dodge(width = 0.6)) +
+  labs(x = "", y = "Rank") +
+  scale_color_discrete(name = "Keywords") +
   theme_AP() +
-  theme(legend.position = c(0.8, 0.3))
-
-plot.bars
+  theme(legend.position = "right")
 ```
 
-```{r merge_plots1, dependson=c("plot_time", "plot_bars"), fig.height=3.2, fig.width=6, warning=FALSE}
+# Study of n-tokens
 
-# MERGE PLOTS ------------------------------------------------------------------
+```{r tokens, dependson=c("models_vec", "keywords")}
 
-legend <- get_legend(plot.time + theme(legend.position = "top"))
+# STUDY OF N-TOKENS ###########################################################
 
-bottom <- plot_grid(plot.time + theme(legend.position = "none"), 
-                    plot.bars, ncol = 2, labels = "auto",
-                    rel_widths = c(0.4, 0.6))
-plot_grid(legend, bottom, ncol = 1, rel_heights = c(0.3, 0.7))
-```
+# Number of tokens ------------------------------
+N.tokens <- 2
 
-```{r keywords_search, dependson="vector_models", results="hide", message=FALSE, warning=FALSE}
+# For loop --------------------------------------
+output <- token.analysis <- vec <- plot.token <- 
+  plot.token.model <- graph_plot <- list()
 
-# KEYWORDS SEARCH --------------------------------------------------------------
-
-# Define vectors for search ---------------------------------------------------
-directory <- "/Users/arnaldpuy/Documents/papers/ghms_bibliometric/"
-directory_vec <- paste(directory, models, "_pdfs", sep = "") 
-keywords_vec <- c("sensitivity analysis", "uncertainty analysis", "uncertainty")
-filename_keywords <- paste(models, "keywords", sep = "_")
-
-# Loop -------------------------------------------------------------------------
-dt <- result <- list()
-for (i in 1:length(directory_vec)) {
+for (i in 1:length(keywords_vec)) {
   
-  result[[i]] <- keyword_directory(directory_vec[i],
-                              keyword = keywords_vec,
-                              split_pdf = TRUE)
+  output[[i]] <- full.keyword.dt %>%
+    .[keyword == keywords_vec_stemmed[i]]
   
-  dt[[i]] <- data.table("name" = result[[i]]$pdf_name, 
-                        "keyword" = result[[i]]$keyword, 
-                        "text" = result[[i]]$line_text)
+  # Token analysis -------------------------------------------------------------
   
-  fwrite(dt[[i]], file = paste(filename_keywords[i], ".csv", sep = ""))
+  token.analysis[[i]] <- output[[i]] %>%
+    unnest_tokens(bigram, text, token = "ngrams", n = N.tokens) %>%
+    separate(bigram, into = c("word1", "word2"), sep = " ") %>%
+    # We count the co-occurences of words without taking into account their order
+    # within the n-token
+    .[, `:=`(word1= pmin(word1, word2), word2 = pmax(word1, word2))] %>%
+    count(word1, word2, Model, sort = TRUE) %>%
+    unite(., col = "bigram", c("word1", "word2"), sep = " ")
   
+  vec[[i]] <- token.analysis[[i]] %>%
+    .[, str_detect(bigram, keywords_vec_stemmed[i])]
+  
+  plot.token[[i]] <-   token.analysis[[i]][vec[[i]]] %>%
+    .[, sum(n), bigram] %>%
+    .[order(-V1)] %>%
+    .[, head(.SD, 25)] %>%
+    .[, bigram:= str_remove(bigram, keywords_vec_stemmed[i])] %>%
+    ggplot(., aes(reorder(bigram, V1, sum), V1)) +
+    geom_bar(stat = "identity") +
+    coord_flip() +
+    theme_AP() +
+    labs(y = "$n$", x = "") +
+    theme(legend.position = "none") +
+    ggtitle(keywords_vec_stemmed[i])
+
+  plot.token.model[[i]] <- token.analysis[[i]][vec[[i]]] %>%
+    .[, head(.SD, 5), Model] %>%
+    .[, `:=` (bigram = str_remove(bigram, keywords_vec_stemmed[i]), 
+              Model = as.factor(Model))] %>%
+    .[, bigram:= reorder_within(bigram, n, Model)] %>%
+    ggplot(., aes(reorder(bigram, n, sum), n, fill = Model)) +
+    geom_bar(stat = "identity") +
+    coord_flip() +
+    theme_AP() +
+    labs(y = "$n$", x = "") +
+    scale_x_reordered() +
+    theme(legend.position = "none") +
+    ggtitle(keywords_vec_stemmed[i]) +
+    facet_wrap(~Model, scales = "free", ncol = 3) 
+  
+  # Graph analysis -------------------------------------------------------------
+  
+  bigram_graph <- token.analysis[[i]] %>%
+    separate(., col = "bigram", into = c("word1", "word2"), sep = " ") %>%
+    .[n > 20] %>%
+    graph_from_data_frame()
+  
+  set.seed(666)
+  
+  a <- grid::arrow(type = "closed", length = unit(.08, "inches"))
+  
+  graph_plot[[i]] <- ggraph(bigram_graph, layout = "fr") +
+    geom_edge_link(aes(edge_alpha = n), show.legend = FALSE,
+                   arrow = a, end_cap = circle(.02, 'inches')) +
+    geom_node_point(color = "lightblue", size = 1.2) +
+    geom_node_text(aes(label = name), vjust = 1, hjust = 1, size = 2.5) +
+    labs(x = "", y = "") +
+    theme_AP() +
+    ggtitle(keywords_vec_stemmed[i])
 }
-names(result) <- models
-names(dt) <- models
 ```
 
-```{r plot_keywords, dependson="keywords_search", warning = FALSE, fig.height=3, fig.width=5.5}
+```{r plot_tokens, dependson="tokens", fig.height=4.5, fig.width=5}
 
-# PLOT HISTOGRAMS WITH KEYWORDS ------------------------------------------------
+# PLOT 25 MOST COMMON BIGRAMS ##################################################
 
-dt.keywords <- rbindlist(dt, idcol = "Model") %>%
-  .[, .N, .(Model, name, keyword)] %>%
-  .[, keyword:= str_to_title(keyword)]
+plot_grid(plotlist = plot.token, ncol = 2, labels = "")
+```
 
-plot.keywords.histogram <- dt.keywords %>%
-  ggplot(., aes(N, fill = keyword, color = keyword)) +
-  geom_histogram(position = "identity", alpha = 0.5) +
-  facet_wrap(~Model, ncol = 6) +
-  scale_y_continuous(breaks = pretty_breaks(n = 2)) +
-  scale_x_continuous(breaks = pretty_breaks(n = 3)) +
-  labs(x = "Nº of mentions", y = "Nº of papers") +
-  theme_AP() + 
-  theme(legend.position = "top", 
-        strip.text.x = element_text(size = 8))
+```{r plot_permodel, dependson="tokens", fig.height=6, fig.width=5}
 
-plot.keywords.histogram
+# PLOT 5 MOST BIGRAMS ##########################################################
+
+sapply(1:2, function(i) plot.token.model[i])
+```
+
+```{r plot_networks, dependson="tokens", fig.height=4.5, fig.width=4.5}
+
+# PLOT NETWORKS OF BIGRAMS #####################################################
+
+sapply(1:2, function(i) graph_plot[i])
 ```
